<package format="2">
    <name>tf_monitor</name>
    <version>0.1.0</version>
    <description>ROS2 TF diagnostic tools</description>
    <maintainer email="clyde@mcqueen.net">Clyde McQueen</maintainer>

    <license>BSD</license>

    <url type="repository">https://github.com/clydemcqueen/tf_monitor</url>
    <url type="bugtracker">https://github.com/clydemcqueen/tf_monitor/issues</url>

    <author>Clyde McQueen</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>python3-numpy</exec_depend>
    <exec_depend>rclpy</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
